test/Fail/NoEtaEqualityInductiveRecord.err
NoEtaEqualityInductiveRecord.agda:17.10-14: error: [UnequalTerms]
The terms
  w
and
  c (p w)
are not equal at type R
when checking that the expression refl has type w ≡ c (p w)
